fix: fill height for flex component to fix content alignment

--- a/src/components/Flex/Flex.module.css
+++ b/src/components/Flex/Flex.module.css
@@ -1,5 +1,6 @@
 .base {
   display: flex;
+  height: 100%;
 }
 
 /* align */
